# template

./: README.md  base_snippets.txt  status.do
.github/workflows/: build.yml
base/: .gitignore  CONTRIBUTING.md  Cargo.do  Cargo.toml  LICENSE-MIT  README.md   all.do  cargo-generate.toml  entities.do  status.do
base-memory/:  .gitignore  Cargo.toml  LICENSE-MIT  cargo-generate.toml
base-memory/.github/workflows/: audit.yml  cd.yml
base/.cargo/: config.toml
base/.github/: PULL_REQUEST_TEMPLATE.md
base/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
base/.github/workflows/: cd.yml
base/.scm-git/hooks/: commit-msg  post-checkout  pre-push
base/benches/: status.do
base/entities-sea-orm/: status.do
base/entities-sea-orm/src/: status.do
base/entities-seaorm/: Cargo.toml.liquid  README.md
base/entities-seaorm/src/: default.rs.do
base/examples/: status.do
base/migrations-refinery/: Cargo.toml.liquid  refinery.toml.liquid
base/migrations-refinery/src/: V0__initialize.sql
base/migrations-seaorm/: Cargo.toml
base/mtr/: Cargo.toml
base/tests/: status.do
scripts/: README.md  rtm-generate
test/: base.bats  generate_base_files.bats  generate_base_snippets.bats  get.bats  get_env.bats  help.bats  setup_suite.bash  status.do  test.bats
test/bats/: .gitrepo
test/fixtures/: init.bash
test/fixtures/template.git/: FETCH_HEAD  shallow
test/fixtures/template.git/hooks/: pre-commit
test/fixtures/template.git/objects/pack/: pack-0b744a1673a544064a949ed2fa1e8d461123b445.idx  pack-0b744a1673a544064a949ed2fa1e8d461123b445.pack  pack-12e27cd581a3db29243901d055f4317660beaa4c.idx  pack-12e27cd581a3db29243901d055f4317660beaa4c.pack  pack-27ede1dacd532b5bd7c49a5af82f962d8a46866b.idx  pack-27ede1dacd532b5bd7c49a5af82f962d8a46866b.pack  pack-2e9f3007a2afeb2eb780796ce4aa3c7fb95f07dd.idx  pack-2e9f3007a2afeb2eb780796ce4aa3c7fb95f07dd.pack  pack-38318dd868288831e6c2b7c9f26968b44b0d5073.idx  pack-4334b28ba63065d4ab20cde4c1c64fed87abfb82.idx  pack-4334b28ba63065d4ab20cde4c1c64fed87abfb82.pack  pack-457a06375307469101756a20b5d9b4022bc4ca8a.idx  pack-457a06375307469101756a20b5d9b4022bc4ca8a.pack  pack-59c683ac82dc484d9d45dd92780d2d2e432d0e23.idx  pack-59c683ac82dc484d9d45dd92780d2d2e432d0e23.pack  pack-5d7b0e64ba7a765bfb709e5172d10e22bcc842ef.idx  pack-6810c0c50226d19b49ff41c824d2ae02b74e1075.idx  pack-741022a059c1db7a394b0e8616f6bb6bec3c2b95.idx  pack-741022a059c1db7a394b0e8616f6bb6bec3c2b95.pack  pack-8df4bd3573b5c94f22746e11ba5de420c6459ace.idx  pack-8df4bd3573b5c94f22746e11ba5de420c6459ace.pack  pack-9b69903caa914d87fc8d16a91f731bcfd7a532ba.idx  pack-9b69903caa914d87fc8d16a91f731bcfd7a532ba.pack  pack-a71f00793c1378d4c3c621353e9d7deb7e5b6b8a.idx  pack-a71f00793c1378d4c3c621353e9d7deb7e5b6b8a.pack  pack-ba3c27b5fb8033a33962e495e576a79446777fa0.idx  (+8 more)
test/helper/: common-setup.bash  common-teardown.bash
test/helper/bats-assert/: .gitrepo
test/helper/bats-file/: .gitrepo
test/test_helper/bats-assert/: .gitrepo
test/test_helper/bats-support/: .gitrepo
(+1 files in other folders)
