
[package]
name = "{{project-name}}"
version = "0.0.0"
rust-version = "1.56.0"
edition = "2021"
description = "{{project-description}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if crate_bin %}

{% endif %}
# other general dependencies

{% if crate_bin %}
[[lib]]
path = "src/lib.rs"
name = "{{crate_name}}"
{% endif %}

{% if crate_bin %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}-cli"
{% endif %}
