[workspace]
resolver = "2"
members = []

[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
rust-version = "1.56.0"
edition = "2021"
description = "{{project-description}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if crate_bin %}
anyhow = "1.0"
{% endif %}
{% if crate_bin %}
thiserror = "1.0"
{% endif %}

{% if rtm_git %}[patch.crates-io]
rtm = { git = "https://github.com/rtm-rs/rtm", branch = "main" }
{% endif %}

[features]
default = []

{% if crate_bin %}
[[lib]]
path = "src/lib.rs"
name = "{{crate_name}}"
{% endif %}

{% if crate_bin %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}-cli"
{% endif %}

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. RTM), but not for our code:
[profile.dev.package."*"]
opt-level = 3
