[workspace]
resolver = "2"
members = ["entities",
 "migrations",
 "mtr"]

[package]
name = "{{project-name}}"
version = "0.0.0"
authors = ["{{authors}}"]
rust-version = "1.56.0"
edition = "2021"
description = "{{description}}"
readme = "README.md"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if crate-bin %}
anyhow = "1.0"
{% endif %}
{% if crate-lib %}
thiserror = "1.0"
{% endif %}
{% if !rtm-git %}
rtm = "0"
{% endif %}

[dependencies.refinery]
version = "0.8"
{% if sql-lib %}
features = ["postgres"]
{% endif %}

{% if rtm-git %}[patch.crates-io]
rtm = { git = "https://github.com/rtm-rs/rtm", branch = "main" }
{% endif %}

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[features]
default = []

{{ _rtb_cargo_lib }}

{% if crate-bin %}
[[bin]]
path = "src/main.rs"
name = "{{crate_name}}-srv"
{% endif %}

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. RTM), but not for our code:
[profile.dev.package."*"]
opt-level = 3
